manifests/ingress/public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: "139.185.61.92"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [test.polywhale.cc, polywhale.cc]
      secretName: polywhale-cc-tls
  rules:
    - host: test.polywhale.cc
      http:
        paths:
          - path: /one
            pathType: Prefix
            backend:
              service:
                name: static-nginx-service-1
                port:
                  number: 80
    - host: polywhale.cc
      http:
        paths:
          - path: /two
            pathType: Prefix
            backend:
              service:
                name: static-nginx-service-2
                port:
                  number: 80
